--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,6 @@ services:
         container_name: app
         volumes:
             - ./app:/app
-        environment:
-            - DB_HOST=db
-            - DB_NAME=app
-            - DB_USER=sanch
-            - DB_PASS=pass
         env_file:
             - .env.dev
         ports:
@@ -24,20 +19,16 @@ services:
         container_name: db
         volumes:
             - postgres_data:/var/lib/postgresql/data/
-        environment:
-            - POSTGRES_USER=sanch
-            - POSTGRES_PASSWORD=pass
-            - POSTGRES_DB=app
         env_file:
             - .env.dev
-    pgadmin:
-        image: dpage/pgadmin4:7.4
-        container_name: pgadmin
-        ports:
-            - "5050:80"
-        environment:
-            - PGADMIN_DEFAULT_EMAIL=admin@admin.com
-            - PGADMIN_DEFAULT_PASSWORD=1302
-        restart: always
+    # pgadmin:
+    #     image: dpage/pgadmin4:7.4
+    #     container_name: pgadmin
+    #     ports:
+    #         - "5050:80"
+    #     environment:
+    #         - PGADMIN_DEFAULT_EMAIL=admin@admin.com
+    #         - PGADMIN_DEFAULT_PASSWORD=1302
+    #     restart: always
 volumes:
     postgres_data:
