add env variables

--- a/.env.template
+++ b/.env.template
@@ -1,10 +1,22 @@
-SECRET_KEY=SECRET_KEY
-DEBUG=DEBUG
+SECRET_KEY=django_secret_key
+DEBUG=True_or_False
 ALLOWED_HOSTS=['example.com', '0.0.0.0']
 
 ENGINE=ENGINE
-NAME_DB=NAME_DB
-USER=USER
-PASSWORD=PASSWORD
-HOST=HOST
-PORT=PORT
+NAME_DB=name_db
+USER=user
+PASSWORD=password
+HOST=host
+PORT=port
+
+DB_HOST=host
+DB_NAME=name_db
+DB_USER=user_db
+DB_PASS=pass
+
+POSTGRES_USER=user_db_postgres
+POSTGRES_PASSWORD=password_postgres
+POSTGRES_DB=name_db
+
+PGADMIN_DEFAULT_EMAIL=admin@admin.com
+PGADMIN_DEFAULT_PASSWORD=admin
