--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,14 +21,13 @@ services:
             - postgres_data:/var/lib/postgresql/data/
         env_file:
             - .env.dev
-    # pgadmin:
-    #     image: dpage/pgadmin4:7.4
-    #     container_name: pgadmin
-    #     ports:
-    #         - "5050:80"
-    #     environment:
-    #         - PGADMIN_DEFAULT_EMAIL=admin@admin.com
-    #         - PGADMIN_DEFAULT_PASSWORD=1302
-    #     restart: always
+    pgadmin:
+        image: dpage/pgadmin4:7.4
+        container_name: pgadmin
+        ports:
+            - "5050:80"
+        env_file:
+            - .env.dev
+        restart: always
 volumes:
     postgres_data:
