--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,13 +21,13 @@ services:
             - postgres_data:/var/lib/postgresql/data/
         env_file:
             - .env.dev
-    pgadmin:
-        image: dpage/pgadmin4:7.4
-        container_name: pgadmin
-        ports:
-            - "5050:80"
-        env_file:
-            - .env.dev
-        restart: always
+    # pgadmin:
+    #     image: dpage/pgadmin4:7.4
+    #     container_name: pgadmin
+    #     ports:
+    #         - "5050:80"
+    #     env_file:
+    #         - .env.dev
+    #     restart: always
 volumes:
     postgres_data:
