--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,33 @@
 version: "3.8"
 
 services:
-    app:
-        build: .
-        container_name: app
-        volumes:
-            - ./app:/app
-        env_file:
-            - .env.dev
-        ports:
-            - "8000:8000"
-        command: >
-            sh -c "python manage.py runserver 0.0.0.0:8000"
-        depends_on:
-            - db
-    db:
-        image: postgres:14.6-alpine
-        container_name: db
-        volumes:
-            - postgres_data:/var/lib/postgresql/data/
-        env_file:
-            - .env.dev
-    # pgadmin:
-    #     image: dpage/pgadmin4:7.4
-    #     container_name: pgadmin
-    #     ports:
-    #         - "5050:80"
-    #     env_file:
-    #         - .env.dev
-    #     restart: always
+  app:
+    build: .
+    container_name: app
+    volumes:
+      - ./app:/app
+    env_file:
+      - .env.dev
+    ports:
+      - "8000:8000"
+    command: >
+      sh -c "python manage.py runserver 0.0.0.0:8000"
+    depends_on:
+      - db
+  db:
+    image: postgres:14.6-alpine
+    container_name: db
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    env_file:
+      - .env.dev
+  pgadmin:
+    image: dpage/pgadmin4:7.4
+    container_name: pgadmin
+    ports:
+      - "5050:80"
+    env_file:
+      - .env.dev
+    restart: always
 volumes:
-    postgres_data:
+  postgres_data:
